[gd_scene load_steps=15 format=3 uid="uid://bc22jsfx801uu"]

[ext_resource type="Script" uid="uid://biukqlkr8fqtn" path="res://main.gd" id="1_r0du0"]
[ext_resource type="Script" uid="uid://d108280rtoc5l" path="res://song_visualizer.gd" id="3_r0du0"]
[ext_resource type="PackedScene" uid="uid://brt5ys872xpig" path="res://Player/PlayerController.tscn" id="4_cm0pq"]

[sub_resource type="Gradient" id="Gradient_cm0pq"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.93333334, 0.98, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fos0i"]
gradient = SubResource("Gradient_cm0pq")
width = 2000
height = 2000
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_rxg2q"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.98, 1)
colors = PackedColorArray(0.54901963, 0.11764706, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_glv2v"]
gradient = SubResource("Gradient_rxg2q")
width = 720
height = 720
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_glv2v"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.98, 1)
colors = PackedColorArray(1, 0.16078432, 0.44705883, 1, 1, 0.16078432, 0.45882353, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uu6xs"]
gradient = SubResource("Gradient_glv2v")
width = 579
height = 579
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_r0du0"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.96, 1)
colors = PackedColorArray(1, 0.5647059, 0.12156863, 1, 1, 0.5647059, 0.12156863, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cm0pq"]
gradient = SubResource("Gradient_r0du0")
width = 438
height = 438
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_fos0i"]
interpolation_mode = 1
offsets = PackedFloat32Array(0.96, 1)
colors = PackedColorArray(1, 0.827451, 0.09803922, 1, 1, 0.827451, 0.09803922, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3dxm6"]
gradient = SubResource("Gradient_fos0i")
width = 297
height = 297
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_cm0pq"]

[node name="Main" type="Node"]
script = ExtResource("1_r0du0")

[node name="Ring0" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = SubResource("GradientTexture2D_fos0i")

[node name="Ring4" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = SubResource("GradientTexture2D_glv2v")

[node name="Ring3" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = SubResource("GradientTexture2D_uu6xs")

[node name="Ring2" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = SubResource("GradientTexture2D_cm0pq")

[node name="Ring1" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = SubResource("GradientTexture2D_3dxm6")

[node name="InnerBeatIndicators" type="Node2D" parent="."]
visible = false

[node name="OuterBeatIndicators" type="Node2D" parent="."]
visible = false

[node name="PlayerController" parent="." instance=ExtResource("4_cm0pq")]

[node name="BeatMarkers" type="Node" parent="."]

[node name="PositionLabel" type="Label" parent="."]
visible = false
offset_left = 4.0
offset_top = 6.0
offset_right = 75.0
offset_bottom = 143.0
theme_override_font_sizes/font_size = 30
text = "0.0"

[node name="CountdownLabel" type="Label" parent="."]
visible = false
offset_left = 1.0
offset_top = 117.0
offset_right = 72.0
offset_bottom = 186.0
theme_override_font_sizes/font_size = 30
text = "0.0"

[node name="CachedLatencyLabel" type="Label" parent="."]
visible = false
offset_left = 1.0
offset_top = 312.0
offset_right = 72.0
offset_bottom = 381.0
theme_override_font_sizes/font_size = 30
text = "0.0"

[node name="TimeSinceLastMixLabel" type="Label" parent="."]
visible = false
offset_left = 2.0
offset_top = 430.0
offset_right = 42.0
offset_bottom = 453.0
theme_override_font_sizes/font_size = 30
text = "0.0"

[node name="CollisionZones" type="Node" parent="."]

[node name="Ring1Right" type="Area2D" parent="CollisionZones"]
position = Vector2(788.5, 360)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZones/Ring1Right"]
shape = SubResource("CircleShape2D_cm0pq")

[node name="Ring2Right" type="Area2D" parent="CollisionZones"]
position = Vector2(859, 360)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZones/Ring2Right"]
shape = SubResource("CircleShape2D_cm0pq")

[node name="Ring3Right" type="Area2D" parent="CollisionZones"]
position = Vector2(929.5, 360)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZones/Ring3Right"]
shape = SubResource("CircleShape2D_cm0pq")

[node name="Ring4Right" type="Area2D" parent="CollisionZones"]
position = Vector2(1000, 360)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZones/Ring4Right"]
shape = SubResource("CircleShape2D_cm0pq")

[node name="Ring1Left" type="Area2D" parent="CollisionZones"]
position = Vector2(491.5, 360)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZones/Ring1Left"]
shape = SubResource("CircleShape2D_cm0pq")

[node name="Ring2Left" type="Area2D" parent="CollisionZones"]
position = Vector2(421, 360)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZones/Ring2Left"]
shape = SubResource("CircleShape2D_cm0pq")

[node name="Ring3Left" type="Area2D" parent="CollisionZones"]
position = Vector2(350.5, 360)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZones/Ring3Left"]
shape = SubResource("CircleShape2D_cm0pq")

[node name="Ring4Left" type="Area2D" parent="CollisionZones"]
position = Vector2(280, 360)
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionZones/Ring4Left"]
shape = SubResource("CircleShape2D_cm0pq")

[node name="SongVisualizer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("3_r0du0")

[node name="ComboLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 50
horizontal_alignment = 2
